--- a/main.html
+++ b/main.html
@@ -14,5 +14,7 @@
           <title>Whitesands Coding Club</title>
      </head>
 
-     <body></body>
+     <body>
+          
+     </body>
 </html>
